tests/baselines/reference/pathsValidation2.errors.txt
tsconfig.json(5,19): error TS5064: Substitution '1' for pattern '*' has incorrect type, expected 'string', got 'number'.


==== tsconfig.json (1 errors) ====
    {
        "compilerOptions": {
            "baseUrl": ".",
            "paths": {
                "*": [1]
                      ~
!!! error TS5064: Substitution '1' for pattern '*' has incorrect type, expected 'string', got 'number'.
            }
        }
    }
==== a.ts (0 errors) ====
    let x = 1;